@@ -1,3 +1,9 @@
+2014-02-05  Jan Hubicka  <hubicka@ucw.cz>
+	    Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/60013
+	* gcc.dg/pr60013.c: New testcase.
+
 2014-02-05  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* gcc.dg/vmx/sum2s.c: New.
